--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Highscore List</h1>
+
+    <ul>
+      <% highscores.forEach(score => { %>
+      <li>
+        <%= score.name %> - Time: <%= score.time %> sek, 
+        Guesses: <%= score.guesses %>, 
+        Number of Letters: <%= score.wordLength %>, 
+        Repeat letters: <%= score.repeate %>
+      </li>
+      <% }) %>
+    </ul>
+  </body>
 </html>
