--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Highscore List</h1>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <title>Highscores</title>
+</head>
 
-    <ul>
-      <% highscores.forEach(score => { %>
-      <li>
-        <%= score.name %> - Time: <%= score.time %> sek, 
-        Guesses: <%= score.guesses %>, 
-        Number of Letters: <%= score.wordLength %>, 
-        Repeat letters: <%= score.repeate %>
-      </li>
-      <% }) %>
-    </ul>
-  </body>
+<body>
+    <header class="server-header">
+        <span class="material-symbols-outlined">lightbulb</span>               
+        <h1>Wordle</h1>
+        <nav class="server-nav">
+            <a href="/">Play</a>
+            <a href="/about">About</a>
+            <a href="/highscores">Highscores</a>            
+        </nav>
+    </header>
+    <h2>Highscore List</h2>
+    <main>
+        <ul>
+            <% highscores.forEach(score=> { %>
+                <li>
+                    <%= score.name %> - Time: <%= score.time %> sek,
+                    Number of Guesses: <%= score.guesses %>,
+                    Number of Letters: <%= score.wordLength %>,
+                    Repeat letters: <%= score.repeate %>
+                </li>
+                <% }) %>
+        </ul>
+    </main>
+    <footer class="server-footer">
+        &copy; <%= new Date().getFullYear() %> Emily's Wordle App
+    </footer>
+</body>
+
 </html>
