--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,19 +1,65 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  background-color: #edede9;
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 60px;
+}
+
+h1 {
+  font-size: 1.4rem;
+  letter-spacing: 4px;
+  margin-left: 0.5rem;  
+}
+
+h2 {
+  font-size: 2rem;
+  margin-left: 1.8rem;
+}
+
+li{  
+  margin: 0.6rem 0;
+}
+
+ol{
+  font-weight: bold;
+}
+
+.score-name {
+  font-weight: bold;
+  color: #034C53;
+}
+
+.score-label {
+  font-weight: bold;
+  color: #03292c;
+}
+
 .server-header {
-    background-color: #034C53;
-    color: white;
-    padding: 1rem;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    font-family: "Roboto", sans-serif;
+  background-color: #034C53;
+  color: white;
+  padding: 1rem;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  font-family: "Roboto", sans-serif;
+  display: flex; 
+  align-items: center;
+  justify-content:flex-start
+}
+
+.server-header a{
+  color: white;
+  text-decoration: none;
+  padding-left: 1rem; 
 }
 
 .server-footer {
-    text-align: center;
-    padding: 1rem;
-    background-color: #034C53;
-    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    font-size: 0.875rem;
+  text-align: center;
+  padding: 1rem;
+  background-color: #034C53;
+  box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  font-size: 0.875rem;
 }
