Update styles for header and adjust font sizes in index page

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -14,9 +14,9 @@
         <span class="material-symbols-outlined">lightbulb</span>               
         <h1>Wordle</h1>
         <nav class="server-nav">
-            <a href="/">Play</a>
-            <a href="/about">About</a>
-            <a href="/highscores">Highscores</a>            
+            <a href="/">PLAY</a>
+            <a href="/about">ABOUT</a>
+            <a href="/highscores">HIGHEST SCORES</a>            
         </nav>
     </header>
     <h2>Highscore List</h2>
