Fix formatting in highscore display for better readability

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -29,12 +29,12 @@
                     </span> 
                     - Number of Guesses:
                     <span class="score-label">
-                        <%= score.guesses %>
+                        <%= score.guesses %>,
                     </span>     
                     Time:<span class="score-label">
                         <%= score.time %> sec,
                     </span>
-                    </span>, Number of Letters:
+                    </span> Number of Letters:
                     <span class="score-label">
                         <%= score.wordLength %>
                     </span>, Repeat
