Fix typo in heading from "Highscore List" to "Highest Scores List"

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -19,7 +19,7 @@
             <a href="/highscores">HIGHEST SCORES</a>
         </nav>
     </header>
-    <h2>Highscore List</h2>
+    <h2>Highest Scores List</h2>
     <main>
         <ol>
             <% highscores.forEach(score=> { %>
