Fix variable name typo in highscores display and change response /highscores

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -39,7 +39,7 @@
                         <%= score.wordLength %>
                     </span>, Repeat
                     letters: <span class="score-label">
-                        <%= score.repeate %>
+                        <%= score.repeat %>
                     </span>
                 </li>
                 <% }) %>
