Add favicon and update document title in App component

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <title>Highscores</title>
+    <title>Wordle App</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
 
 <body>
     <header class="server-header">
         <span class="material-symbols-outlined">lightbulb</span>
-        <h1>Wordle</h1>
+        <a href="/">
+            <h1>Wordle</h1>
+        </a>          
         <nav class="server-nav">
             <a href="/">PLAY</a>
             <a href="/about">ABOUT</a>
