--- a/server/views/404.ejs
+++ b/server/views/404.ejs
@@ -19,6 +19,8 @@
             <a href="/highscores">HIGHEST SCORES</a>
         </nav>
     </header>
-    <img src="/404.svg" alt="404 Not Found" class="error-image">
+    <div class="error-container">
+        <img src="/404.svg" alt="404 Not Found" class="error-image">        
+    </div>    
 </body>
 </html>
