--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -15,6 +15,12 @@ h1 {
 h2 {
   font-size: 2rem;
   margin-left: 1.8rem;
+  text-align: center;  
+  padding-top: 0.2rem;
+}
+
+h3{
+  margin-left: 1.8rem;
 }
 
 li{  
@@ -77,3 +83,17 @@ ol{
   max-width: 400px; 
   height: auto; 
 }
+
+.error-message {
+  background-color: #ffebeb; 
+  color: #d32f2f; 
+  font-weight: bold;
+  padding: 12px;
+  border: 2px solid #d32f2f; 
+  border-radius: 8px;
+  text-align: center;
+  margin: 20px auto;
+  width: fit-content;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
