Update time display in highscores from seconds to minutes for clarity

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -34,7 +34,7 @@
           <span class="score-name"> <%= score.name %> </span>
           - Number of Guesses:
           <span class="score-label"> <%= score.guesses %>, </span>
-          Time:<span class="score-label"> <%= score.time %> sec, </span>
+          Time:<span class="score-label"> <%= score.time %> min, </span>
           Number of Letters:
           <span class="score-label"> <%= score.wordLength %> </span>, Repeat
           letters:
@@ -50,7 +50,7 @@
           <span class="score-name"> <%= score.name %> </span>
           - Number of Guesses:
           <span class="score-label"> <%= score.guesses %>, </span>
-          Time:<span class="score-label"> <%= score.time %> sec, </span>
+          Time:<span class="score-label"> <%= score.time %> min, </span>
           Number of Letters:
           <span class="score-label"> <%= score.wordLength %> </span>, Repeat
           letters:
