--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   background-color: #edede9;
@@ -9,32 +10,32 @@ body, html {
 h1 {
   font-size: 1.1rem;
   letter-spacing: 4px;
-  margin-left: 0.5rem;  
+  margin-left: 0.5rem;
 }
 
 h2 {
   font-size: 2rem;
   margin-left: 1.8rem;
-  text-align: center;  
+  text-align: center;
   padding-top: 0.2rem;
 }
 
-h3{
+h3 {
   margin-left: 1.8rem;
 }
 
-li{  
+li {
   margin: 0.6rem 0;
   letter-spacing: 1px;
 }
 
-ol{
+ol {
   font-weight: bold;
 }
 
 .score-name {
   font-weight: bold;
-  color: #034C53;
+  color: #034c53;
 }
 
 .score-label {
@@ -43,27 +44,27 @@ ol{
 }
 
 .server-header {
-  background-color: #034C53;
+  background-color: #034c53;
   color: white;
   padding: 0.5rem;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   font-family: "Roboto", sans-serif;
-  display: flex; 
+  display: flex;
   align-items: center;
-  justify-content:flex-start
+  justify-content: flex-start;
 }
 
-.server-header a{
+.server-header a {
   color: white;
   text-decoration: none;
   padding-left: 1rem;
-  font-size: 0.9rem; 
+  font-size: 0.9rem;
 }
 
 .server-footer {
   text-align: center;
   padding: 1rem;
-  background-color: #034C53;
+  background-color: #034c53;
   box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
   position: fixed;
   bottom: 0;
@@ -75,22 +76,22 @@ ol{
 .error-container {
   display: flex;
   justify-content: center;
-  align-items: center; 
-  height: 100vh; 
+  align-items: center;
+  height: 100vh;
 }
 
-.error-image {  
+.error-image {
   width: 70%;
-  max-width: 400px; 
-  height: auto; 
+  max-width: 400px;
+  height: auto;
 }
 
 .error-message {
-  background-color: #ffebeb; 
-  color: #d32f2f; 
+  background-color: #ffebeb;
+  color: #d32f2f;
   font-weight: bold;
   padding: 12px;
-  border: 2px solid #d32f2f; 
+  border: 2px solid #d32f2f;
   border-radius: 8px;
   text-align: center;
   margin: 20px auto;
@@ -98,3 +99,11 @@ ol{
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+@media (min-width: 901px) {
+  main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+  }
+}
